# phoenix_members_files

./: HISTORY.md  justfile  pyproject.toml
src/members_files/: __init__.py  config.py  constants.py  csv_utils.py  data_files.py  main.py  main_menu.py  module_caller.py  process.py  root.py  temp.py  text.py
src/members_files/forms/: frm_config.py  frm_main.py  frm_report.py
tests/: test_config.py  test_version.py
tests/test_data/config/: config.toml
